docs/source/examples/numpy.random.chpl
use Random;
var a : [0..2, 0..2] real;
fillRandom(a);
